--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,14 @@
 /*****************************************************/
 /* Always add your CSS below the reset CSS           */
 /*****************************************************/
+:root {
+  --color-font: #333;
+  --color-primary: #205373;      /* dark blue */
+  --color-secondary: #517EA6;    /* light blue */
+  --color-accent: #A6653F;       /* orange brown */
+  --color-accent-light: #F2BC8D; /* light tan */
+}
+
 *,
 *::before,
 *::after {
@@ -13,7 +21,7 @@
 }
 
 * {
-  /* margin: 0; */
+  margin: 0;
   /* this an experimental line-height; if it breaks, add line-height: 1.5 to body */
   line-height: calc(1em + 0.5rem);
 }
@@ -28,7 +36,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-/* img,
+img,
 picture,
 video,
 canvas,
@@ -36,7 +44,7 @@ svg {
   display: block;
   max-width: 100%;
   height: auto;
-} */
+}
 
 input,
 button,
@@ -47,10 +55,14 @@ select {
 
 /* until you get a feel for overflow, I'll keep these next two commented out */
 /* p,
-h1,
-h2,
-h3,
-h4,
+h1,font-family: 'Climate Crisis', cursive;
+font-family: 'Lobster', cursive; color: var(--color-heading); /* light blue */
+h2,font-family: 'Climate Crisis', cursive;
+font-family: 'Lobster', cursive;
+h3,font-family: 'Climate Crisis', cursive;
+font-family: 'Lobster', cursive;
+h4,font-family: 'Climate Crisis', cursive;
+font-family: 'Lobster', cursive;
 h5,
 h6 {
   overflow-wrap: break-word;
